debug ansible_env

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,9 @@
 ---
 # tasks file for acs
 
+- debug:
+    msg: "{{ ansible_env }}"
+    
 - name: Create {{ acs_user }} user account
   user:
     name: "{{ acs_user }}"
