--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -13,6 +13,9 @@ platforms:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
     privileged: true
     pre_build_image: true
+    env:
+      ALFRESCO_NEXUS_USER: ${ALFRESCO_NEXUS_USER} 
+      ALFRESCO_NEXUS_PASSWORD: ${ALFRESCO_NEXUS_PASSWORD}
 provisioner:
   name: ansible
   lint:
