fixed ansible_env typo

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -6,4 +6,4 @@
     - role: acs
       vars:
         nexus_password: "{{ ansible_env.ALFRESCO_NEXUS_PASSWORD }}"
-        nexus_user: "{{ ansiblie_env.ALFRESCO_NEXUS_USER }}"
+        nexus_user: "{{ ansible_env.ALFRESCO_NEXUS_USER }}"
